--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="gallery">
         <figure class="gallery-item">
             <img class="gallery-item__image"
-                src="image/dragon.jpg">
+                src="images/dragon.jpg">
         </figure>
         <figure class="gallery-item">
             <img class="gallery-item__image"
