--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             <img class="gallery-item__image"
                 src="images/dragon.jpg">
         </figure>
+
+        <figure class="gallery-item">
+            <img class="gallery-item__image"
+                src="images/wateringplants.jpg">
+        </figure>
         
     </div>
 
