--- a/index.html
+++ b/index.html
@@ -12,16 +12,8 @@
 <body>
 
     <div class="gallery">
-        <figure class="gallery-item">
-            <img class="gallery-item__image"
-                src="images/dragon.jpg">
-        </figure>
-
-        <figure class="gallery-item">
-            <img class="gallery-item__image"
-                src="images/wateringplants.jpg">
-        </figure>
-        
+        <div id="#ai_gallery" class="gallery"></div>
+        <script type="module" src="script.js"></script>
     </div>
 
 </body>
